# hri_audio_stack

./: .gitignore  package.xml  setup.cfg  setup.py
capabilities/: listen.yaml  listen_provider.yaml
hri_audio_stack/: requirements.txt  voice_listener_action_server.py  voice_listener_client.py  voice_speaker_action_server.py  voice_speaker_client.py
include/my_robot_voice/: listen_action_runner.hpp
launch/: listen.launch.py  speak.launch.py
my_robot_voice/: voice_command_client.py  voice_listener.py  voice_listener_action_server.py
