<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_audio_stack</name>
  <version>0.0.0</version>
  <description>voice interactions with robots</description>
  <maintainer email="buddhigamage217@gmail.com">buddhi</maintainer>
  <license>Apache-2.0</license>

  <export>
    <build_type>ament_python</build_type>
    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_action</build_depend>
    <build_depend>hri_audio_msgs</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclcpp_action</exec_depend>
    <exec_depend>hri_audio_msgs</exec_depend>
  </export>
</package>
